# v-pipe-scout

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  app.py  common.py  config.yaml  covspectrum.py  covspectrum_api.py  dependabot.yml  docker-compose.yml  environment.yml  genspectrum.py  index.py  lapis.py  mutation_freq.py  pyproject.toml  pytest.ini  requirements.txt  resistance_mut.py  resistance_mut_silo.py  run_lollipop.py  test_coverage.py  variant_deconv.py  variant_signature_compose.py  web_explorer.py  wiseloculus.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker-ci.yml  docker-validation.yml  frontend-tests.yml  streamlit-app.yml  worker-tests.yml
.streamlit/: example.secrets.toml
api/: README_variant_component.md  covspectrum.py  lapis.py  signatures.py  variant_signature_component.py  wiseloculus.py
app/: Dockerfile  app.py  config.yaml  environment.yml  interface.py  state.py
app/api/: __init__.py  covspectrum.py  (+3 more)
backend/: environment.yml  run_lollipop.ipynb  run_lollipop.py
components/: variant_signature_component.py
data/: convert_exon_cds.ipynb  translated_RdRp_in_ORF1a_ORF1b_mutations.csv
scripts/: auto-deploy.sh  exons2cds.py  test-deployment.sh
subpages/: compact_variant_explorer.py  download_count_cov.py  dynamic_mutations.py  multi_variant_signatures.py  resistance_mut_silo.py  signature_explorer.py  variant_signature_compose.py  variant_signature_composer.py
tests/: st_smoke_test.py  test_app.py
worker/: Dockerfile  deconvolve.py  environment.yml  tasks.py
(+23 files in other folders)
