[tool.poetry]
name = "vpipe-biohack24-frontend"
version = "0.1.0"
description = ""
authors = ["Gordon J. Köhn <gordon@koehn.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
